# Machine_Learning_Zoomcamp_2025

./: README.md
01-intro/: homework-01.ipynb
01-intro/.ipynb_checkpoints/: homework-01-checkpoint.ipynb
02-regression/: homework2.ipynb  lesson2.ipynb
02-regression/.ipynb_checkpoints/: homework2-checkpoint.ipynb
06-trees/: 06-trees-homework.ipynb
06-trees/.ipynb_checkpoints/: 06-trees-homework-checkpoint.ipynb
08-deep-learning/: lesson-08.py
09-serverless/: Untitled.ipynb
09-serverless/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
10-kubernetes/: .gitignore  pyproject.toml
10-kubernetes/k8s/: deployment.yaml  service.yaml
capstone-project/: README.md  Untitled.ipynb  pyproject.toml  semantic_search.py  train.py  transform.py
capstone-project/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
capstone-project/datasets/: OFAC-financial-sanctions-addresses.csv
midterm-project/: .gitignore  Dockerfile  EDA.ipynb  README.md  fly.toml  ping.py  predict.py  pyproject.toml  requirements.txt  test_record.json  train.py  transform.py
midterm-project/.ipynb_checkpoints/: EDA-checkpoint.ipynb  README-checkpoint.md
