[project]
name = "midterm-project"
version = "0.1.0"
description = "Warsaw real estate property price prediction "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.9.0",
    "fastapi>=0.127.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.2",
]
